# SDL2_editor

./: .gitignore  CMakeLists.txt  README.md
src/: browser.hpp  core.hpp  main.cpp  tiles.hpp
test/: test.cpp
